test_case/rust-lang_rust/56765_447101855_103.rs
\n\nWith this approach, x and y share ownership of the data via the `Rc` (reference\ncount type). `RefCell` essentially performs runtime borrow checking: ensuring\nthat at most one writer or multiple readers can access the data at any one time.\n\nIf you wish to learn more about ownership in Rust, start with the chapter in the\nBook:\n\nhttps://doc.rust-lang.org/book/first-edition/ownership.html\n"},"level":"error","spans":[{"file_name":"/checkout/src/test/ui/binop/binop-consume-args.rs","byte_start":1411,"byte_end":1414,"line_start":42,"line_end":42,"column_start":10,"column_end":13,"is_primary":true,"text":[{"text":"    drop(rhs);  //~ ERROR use of moved value: `rhs`","highlight_start":10,"highlight_end":13}],"label":"value used here after move","suggested_replacement":null,"suggestion_applicability":null,"expansion":null},{"file_name":"/checkout/src/test/ui/binop/binop-consume-args.rs","byte_start":1345,"byte_end":1348,"line_start":40,"line_end":40,"column_start":1e to move our string to `calculate_length`, we can give it\na reference to it with `&` instead.\n\n